--- a/09-conclusion.tex
+++ b/09-conclusion.tex
@@ -2,11 +2,20 @@
 %% 
 \cleardoubleoddpage%  Make sure to start each chapter on a new odd page
 \chapter{Conclusion and Outlook}
-
 \section{Summary of Findings}
+This thesis was primarily motivated by the goal of evaluating the effectiveness of reconstruction-based and density-estimation-based machine learning methods on respiratory sound data in a semi-supervised context. Our focus was to demonstrate the capability of these approaches in utilizing common feature representations for this data type and to determine which method is best under various conditions.\\
+Delving into the potential of treating respiratory sound analysis as an anomaly detection task, we built upon Cozzatti et al.'s (2022) findings to demonstrate that semi-supervised machine learning algorithms are effective for this purpose. A notable achievement of this thesis was the introduction of novel models that achieved state-of-the-art results in this domain. To the best of our knowledge, this is the first time the GMADE architecture has been applied to respiratory sounds, and it was effective.\\
+Our exploration revealed that reconstruction-based and density-estimation-based methods are proficient in modeling the complexities of breathing sounds, each showing different strengths. Furthermore, these models' generalization capabilities and noise tolerance have proven them ready for real-world application. We also offer insight into the training process of these models, hinting at the parameters to tune. This guidance provides a foundation for future research and practical applications in unsupervised respiratory sound anomaly detection.
 \section{Potential Applications and Practical Implications}
+Based on our research, the development of automated diagnostic systems holds significant promise in the medical field. These systems can extend healthcare professionals' capabilities, enabling more informed decision-making and facilitating the early detection of respiratory conditions that may be unnoticeable to the human ear. An essential aspect of this technology is its ability to accurately model normal breathing patterns, which could lead to the discovery of new breathing anomalies and potentially identify novel indicators of respiratory diseases.\\
+Furthermore, these algorithms could be integrated into personal medical devices, significantly reducing individuals' hesitation to seek medical consultation. This ease of access could lead to earlier interventions and lower healthcare costs. Such devices offer continuous monitoring of respiratory sounds instead of periodic assessments typically conducted in a clinical setting. This constant monitoring could be pivotal in detecting spontaneous anomalies that might not be present or detectable during a doctor's appointment.
 \section{Limitations of the Proposed Approaches}
+The success of the approaches we discussed depends on overcoming some current limitations. One central area of concern is the interpretability of the anomaly detection systems. Although reconstruction-based and density-estimation-based methods provide a certainty value associated with their estimations, their reasoning remains unclear. This lack of transparency in decision-making limits their use in assisting medical professionals, who require understandable diagnostic reasoning.\\
+Another significant challenge faced in this research is the need for more data to be available. The respiratory sound database we used was originally intended for supervised classification. As discussed in \autoref{method:preprocessing}, adapting it for semi-supervised anomaly detection resulted in a substantial data loss. While we could demonstrate our models' generalization capabilities, the limited data size left uncertainties regarding their potential performance with a more extensive dataset. This raises questions about how these models would perform in scenarios where larger and more diverse datasets are available, highlighting the need for datasets specifically designed for semi-supervised learning in respiratory sound analysis.
 \section{Directions for Future Research}
+Future research should focus on addressing the limitations we have identified. A key area is the need for more data. Researchers could either concentrate on collecting more real-world respiratory sound data or investigate data augmentation techniques that enhance semi-supervised learning.\\
+Regarding the issue of interpretability, there is potential for exploring models that effectively use MelSpectrograms. Specifically, reconstruction-based methods combined with MelSpectrograms could be promising. They could highlight irregularities in the spectrogram, which healthcare professionals could directly interpret. This approach could make it easier for medical experts to understand and trust the machine learning outputs.\\
+Moreover, there is a need to evaluate more diverse model architectures within both the reconstruction-based and density-estimation-based frameworks. Comparing these new models to existing ones could provide further insights into which approach is more suitable for analyzing respiratory sounds. One suggestion is to experiment with 2-dimensional convolution reconstruction models, which leverage the image-like characteristics of MelSpectrograms, potentially offering better interpretability by highlighting the areas of deviation from the original.
 
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
