--- a/references.bib
+++ b/references.bib
@@ -296,3 +296,11 @@
   pages={2623--2631},
   year={2019}
 }
+
+@misc{optuna2014doc,
+	author = {},
+	title = {optuna.samplers.{T}{P}{E}{S}ampler; {O}ptuna 3.5.0 documentation},
+	howpublished = {\url{https://optuna.readthedocs.io/en/stable/reference/samplers/generated/optuna.samplers.TPESampler.html}},
+	year = {2018},
+	note = {[Accessed 18-12-2023]},
+}
